# shoot-app-cli

./: .gitignore  CMakeLists.txt  README.md
include/: controller.hpp  model.hpp  shoot_app.hpp  view.hpp
src/: CMakeLists.txt  controller.cpp  main.cpp  model.cpp  shoot_app.cpp  view.cpp
test/: CMakeLists.txt  tests-view.cpp
